force-app/main/default/objects/Account/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <label>Contract Renewal Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>