force-app/main/default/objects/Account/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>The date when the service agreement began.</description>
    <label>Contract Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>