force-app/main/default/objects/Account/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Customized</fullName>
            </value>
            <value>
                <fullName>Pay-as-You-Go</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>