force-app/main/default/objects/Account/fields/Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rating__c</fullName>
    <label>Customer Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>