force-app/main/default/objects/Account/fields/Pickup_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Frequency__c</fullName>
    <label>Pickup Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>