force-app/main/default/objects/Account/fields/Service_Level_Agreement_SLA__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Agreement_SLA__c</fullName>
    <label>Service Level Agreement (SLA)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>