force-app/main/default/objects/Account/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential Garbage Collection</fullName>
            </value>
            <value>
                <fullName>Commercial Recycling</fullName>
            </value>
            <value>
                <fullName>Industrial Waste Disposal</fullName>
            </value>
            <value>
                <fullName>Hazardous Waste Collection</fullName>
            </value>
            <value>
                <fullName>Electronic Waste Collection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>