force-app/main/default/objects/Account/fields/Waste_Volume__c.field-meta.xml
<CustomField>
    <fullName>Waste_Volume__c</fullName>
    <label>Waste Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>